fix: use no_log option for include_vars (CVE-2024-8775)

--- a/roles/ssh/tasks/main.yml
+++ b/roles/ssh/tasks/main.yml
@@ -19,6 +19,7 @@
         - main.yaml
       paths:
         - ../vars
+  no_log: true
 
 - name: Include target tasks
   ansible.builtin.include_tasks: '{{ _target }}.yml'
