--- a/playbooks/00-initialize-node.yml
+++ b/playbooks/00-initialize-node.yml
@@ -19,6 +19,7 @@
             - '{{ ansible_distribution }}.yml'
           paths:
             - ../vars
+      no_log: true
       tags:
         - always
 
