--- a/playbooks/10-workstations.yml
+++ b/playbooks/10-workstations.yml
@@ -20,6 +20,7 @@
             - '{{ ansible_distribution }}.yml'
           paths:
             - ../vars
+      no_log: true
       tags:
         - always
 
