--- a/roles/init/tasks/main.yml
+++ b/roles/init/tasks/main.yml
@@ -8,6 +8,7 @@
         - '{{ ansible_distribution | lower }}.yml'
       paths:
         - ../vars
+  no_log: true
 
 - name: Include OS-specific tasks
   ansible.builtin.include_tasks: '{{ lookup("ansible.builtin.first_found", params) }}'
@@ -18,3 +19,4 @@
         - '{{ ansible_distribution | lower }}.yml'
       paths:
         - .
+  no_log: true
